# lnpt

./: .pre-commit-config.yaml  README.md  pyproject.toml
lnpt/: __init__.py  decorators.py  model.py  runner.py
tests/: test_runner.py
