[tool.poetry]
name = "lnpt"
version = "0.1.0"
description = "A LN protocol tester"
authors = ["Christian Decker <decker@blockstream.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
rich = "^13.4.2"


[tool.poetry.group.dev.dependencies]
mypy = "^1.3.0"
typing-extensions = "^4.6.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
